fix: change z-index

--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -164,7 +164,7 @@
 .modal {
   display: flex;
   position: fixed;
-  z-index: 999;
+  z-index: 18;
   left: 0;
   top: 0;
   width: 100%;
